# sgpanel

./: .gitmodules  README.md  meson.build
meson/: meson_post_install.py
src/: clock.js  com.subgraph.sgpanel.in  com.subgraph.sgpanel.src.gresource.xml  main.js  meson.build  workspaces.js
src/status/: brightness.js  network.js  power.js  status.js  volume.js
